# computer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
compiler/: CMakeLists.txt  compile.cpp  compile.h  main.cpp  set.cpp  set.h  token.cpp  token.h
compiler/keywords/: mov.cpp  mov.h  set.cpp  set.h  shift.cpp  shift.h
computer/: CMakeLists.txt  alu.cpp  alu.h  loader.cpp  loader.h  main.cpp  memory.cpp  memory.h  processor.cpp  processor.h  program.cpp  program.h
computer/components/: alu.cpp  alu.h  memory.cpp  memory.h  processor.cpp  processor.h
